Resolviendo error ortografico

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefaut" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -128,7 +128,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault2" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -168,7 +168,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault2" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -208,7 +208,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault4" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -248,7 +248,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -307,7 +307,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefaut6" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -347,7 +347,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault8" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -387,7 +387,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault11" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -427,7 +427,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault33" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -467,7 +467,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault55" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -526,7 +526,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault455" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -566,7 +566,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault45" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -606,7 +606,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault445" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -646,7 +646,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault4456" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -686,7 +686,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault4457" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -759,7 +759,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefaut" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -799,7 +799,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault2" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -839,7 +839,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault4" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -879,7 +879,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -919,7 +919,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -959,7 +959,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -999,7 +999,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -1039,7 +1039,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -1079,7 +1079,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -1119,7 +1119,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -1179,7 +1179,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefaut6" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -1219,7 +1219,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault8" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -1259,7 +1259,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault11" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -1299,7 +1299,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault33" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -1339,7 +1339,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault55" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -1379,7 +1379,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="desc-finanzas" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -1419,7 +1419,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="desc-man-salud" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -1459,7 +1459,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="desc-manej-hogar" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -1499,7 +1499,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="desc-comida-limpieza" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -1539,7 +1539,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="desc-relig-espi" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -1579,7 +1579,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="desc-seg-emerg" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
@@ -1619,7 +1619,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="desc-compras" id="flexRadioDefault2" >
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Requiere Apollo
+                          Requiere apoyo
                         </label>
                       </div>
                     </div>
