Caracterizacion de accesibilidad programatica

--- a/index.html
+++ b/index.html
@@ -2276,7 +2276,293 @@
         <div id="acces-progra" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accesibilidad">
           <div class="accordion-body">
 
-            <h3>EN DESARROLLO!!!!</h3>
+            <div class="accordion" id="programatica">
+              
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseVComuni" aria-expanded="true" aria-controls="collapseVComuni">
+                    Vida Comunitaria
+                  </button>
+                </h2>
+                <div id="collapseVComuni" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#programatica">
+                  <div class="accordion-body">
+                    <div class="row">
+
+                      <div class="col-md-4">
+                        <p class="fs-6">Participa en organizaciones benéficas</p>
+                        <div class="col-md-6 d-flex">
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="org-benef" id="flexRadioDefault1">
+                            <label class="form-check-label" for="flexRadioDefault1">
+                              Si
+                            </label>
+                          </div>
+                          <div class="form-check ms-2">
+                            <input class="form-check-input" type="radio" name="org-benef" id="flexRadioDefault2" >
+                            <label class="form-check-label" for="flexRadioDefault2">
+                              No
+                            </label>
+                          </div>
+                        </div>
+                        <div class="col-md-6">
+                          <p class="fs-6 mt-2">¿Cuál?</p>
+                          <input type="text" class="form-control">
+                        </div>
+                      </div>
+
+                      <div class="col-md-3">
+                        <p class="fs-6">Participa en Clubes</p>
+                        <div class="col-md-6 d-flex">
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="part-clubs" id="flexRadioDefault1">
+                            <label class="form-check-label" for="flexRadioDefault1">
+                              Si
+                            </label>
+                          </div>
+                          <div class="form-check ms-2">
+                            <input class="form-check-input" type="radio" name="part-clubs" id="flexRadioDefault2" >
+                            <label class="form-check-label" for="flexRadioDefault2">
+                              No
+                            </label>
+                          </div>
+                        </div>
+                        <div class="col-md-6">
+                          <p class="fs-6 mt-2">¿Cuál?</p>
+                          <input type="text" class="form-control">
+                        </div>
+                      </div>
+
+                      <div class="col-md-5">
+                        <p class="fs-6">Participa en organizaciones sociales profesionales</p>
+                        <div class="col-md-6 d-flex">
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="org-soci" id="flexRadioDefault1">
+                            <label class="form-check-label" for="flexRadioDefault1">
+                              Si
+                            </label>
+                          </div>
+                          <div class="form-check ms-2">
+                            <input class="form-check-input" type="radio" name="org-soci" id="flexRadioDefault2" >
+                            <label class="form-check-label" for="flexRadioDefault2">
+                              No
+                            </label>
+                          </div>
+                        </div>
+                        <div class="col-md-6">
+                          <p class="fs-6 mt-2">¿Cuál?</p>
+                          <input type="text" class="form-control">
+                        </div>
+                      </div>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOcioDepor" aria-expanded="false" aria-controls="collapseOcioDepor">
+                    Ocio y tiempo libre
+                  </button>
+                </h2>
+                <div id="collapseOcioDepor" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#programatica">
+                  <div class="accordion-body">
+
+                    <div class="row">
+
+                      <div class="col-md-4">
+                        <p class="fs-6">Participa en actividades recreativas o de ocio</p>
+                        <div class="col-md-6 d-flex">
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="part-ocio" id="flexRadioDefault1">
+                            <label class="form-check-label" for="flexRadioDefault1">
+                              Si
+                            </label>
+                          </div>
+                          <div class="form-check ms-2">
+                            <input class="form-check-input" type="radio" name="part-ocio" id="flexRadioDefault2" >
+                            <label class="form-check-label" for="flexRadioDefault2">
+                              No
+                            </label>
+                          </div>
+                        </div>
+                        <div class="col-md-6">
+                          <p class="fs-6 mt-2">¿Cuál?</p>
+                          <input type="text" class="form-control">
+                        </div>
+                      </div>
+
+                      <div class="col-md-2">
+                        <p class="fs-6">Participa en deportes</p>
+                        <div class="col-md-6 d-flex">
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="part-deport" id="flexRadioDefault1">
+                            <label class="form-check-label" for="flexRadioDefault1">
+                              Si
+                            </label>
+                          </div>
+                          <div class="form-check ms-2">
+                            <input class="form-check-input" type="radio" name="part-deport" id="flexRadioDefault2" >
+                            <label class="form-check-label" for="flexRadioDefault2">
+                              No
+                            </label>
+                          </div>
+                        </div>
+                        <div class="col-md-6">
+                          <p class="fs-6 mt-2">¿Cuál?</p>
+                          <input type="text" class="form-control">
+                        </div>
+                      </div>
+
+                      <div class="col-md-6">
+                        <p class="fs-6">Participa en actividades de entretenimiento (museos, cines y teatro)</p>
+                        <div class="col-md-6 d-flex">
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="part-entret" id="flexRadioDefault1">
+                            <label class="form-check-label" for="flexRadioDefault1">
+                              Si
+                            </label>
+                          </div>
+                          <div class="form-check ms-2">
+                            <input class="form-check-input" type="radio" name="part-entret" id="flexRadioDefault2" >
+                            <label class="form-check-label" for="flexRadioDefault2">
+                              No
+                            </label>
+                          </div>
+                        </div>
+                        <div class="col-md-6">
+                          <p class="fs-6 mt-2">¿Cuál?</p>
+                          <input type="text" class="form-control">
+                        </div>
+                      </div>
+
+                      <div class="col-md-4 mt-3">
+                        <p class="fs-6">Toca algún instrumento</p>
+                        <div class="col-md-6 d-flex">
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="instrumento" id="flexRadioDefault1">
+                            <label class="form-check-label" for="flexRadioDefault1">
+                              Si
+                            </label>
+                          </div>
+                          <div class="form-check ms-2">
+                            <input class="form-check-input" type="radio" name="instrumento" id="flexRadioDefault2" >
+                            <label class="form-check-label" for="flexRadioDefault2">
+                              No
+                            </label>
+                          </div>
+                        </div>
+                        <div class="col-md-6">
+                          <p class="fs-6 mt-2">¿Cuál?</p>
+                          <input type="text" class="form-control">
+                        </div>
+                      </div>
+
+                      <div class="col-md-2 mt-3">
+                        <p class="fs-6">Viaja por si sola</p>
+                        <div class="col-md-6 d-flex">
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="viaja-sola" id="flexRadioDefault1">
+                            <label class="form-check-label" for="flexRadioDefault1">
+                              Si
+                            </label>
+                          </div>
+                          <div class="form-check ms-2">
+                            <input class="form-check-input" type="radio" name="viaja-sola" id="flexRadioDefault2" >
+                            <label class="form-check-label" for="flexRadioDefault2">
+                              No
+                            </label>
+                          </div>
+                        </div>
+                        <div class="col-md-6">
+                          <p class="fs-6 mt-2">¿Cuál?</p>
+                          <input type="text" class="form-control">
+                        </div>
+                      </div>
+
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseRelig" aria-expanded="false" aria-controls="collapseRelig">
+                    Religión y espiritualidad
+                  </button>
+                </h2>
+                <div id="collapseRelig" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#programatica">
+                  <div class="accordion-body">
+
+                    <div class="row">
+                      <div class="col-md-5">
+                        <p class="fs-6">Participa en actividades organizaciones o prácticas religiosas</p>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="col-md-6 d-flex">
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="part-relig" id="flexRadioDefault1">
+                            <label class="form-check-label" for="flexRadioDefault1">
+                              Si
+                            </label>
+                          </div>
+                          <div class="form-check ms-2">
+                            <input class="form-check-input" type="radio" name="part-relig" id="flexRadioDefault2" >
+                            <label class="form-check-label" for="flexRadioDefault2">
+                              No
+                            </label>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-4">
+                        <p class="fs-6">¿Cuál?</p>
+                        <input type="text" class="form-control">
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseDerechos" aria-expanded="false" aria-controls="collapseDerechos">
+                    Derechos humanos
+                  </button>
+                </h2>
+                <div id="collapseDerechos" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#programatica">
+                  <div class="accordion-body">
+                    <div class="row">
+                      <div class="col-md-5">
+                        <p class="fs-6">Reconoce los derechos humanos</p>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="col-md-6 d-flex">
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="rec-derech" id="flexRadioDefault1">
+                            <label class="form-check-label" for="flexRadioDefault1">
+                              Si
+                            </label>
+                          </div>
+                          <div class="form-check ms-2">
+                            <input class="form-check-input" type="radio" name="rec-derech" id="flexRadioDefault2" >
+                            <label class="form-check-label" for="flexRadioDefault2">
+                              No
+                            </label>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-4">
+                        <p class="fs-6">¿Cuáles?</p>
+                        <input type="text" class="form-control">
+                      </div>
+                    </div>                  
+                  </div>
+                </div>
+              </div>
+
+            </div>
             
           </div>
         </div>
